feat: add AI personalization preferences management and dynamic Gemini model discovery